[gd_scene load_steps=3 format=3 uid="uid://nuvg84pkx332"]

[ext_resource type="Script" uid="uid://cgs62t3tqpdbw" path="res://jan_23_2026/jan_23_2026.gd" id="1_script"]
[ext_resource type="Script" uid="uid://cotmu8th4wqir" path="res://jan_23_2026/element_diagram.gd" id="2_diagram"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Player: 0 | Computer: 0"
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="VBoxContainer/TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Select a card to play"
horizontal_alignment = 1

[node name="GameArea" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ComputerSection" type="VBoxContainer" parent="VBoxContainer/GameArea"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ComputerLabel" type="Label" parent="VBoxContainer/GameArea/ComputerSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Computer's Hand"
horizontal_alignment = 1

[node name="ComputerHand" type="HBoxContainer" parent="VBoxContainer/GameArea/ComputerSection"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="BattleArea" type="CenterContainer" parent="VBoxContainer/GameArea"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/GameArea/BattleArea"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="PlayerBattleCard" type="Panel" parent="VBoxContainer/GameArea/BattleArea/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 150)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/GameArea/BattleArea/HBoxContainer/PlayerBattleCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultLabel" type="Label" parent="VBoxContainer/GameArea/BattleArea/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComputerBattleCard" type="Panel" parent="VBoxContainer/GameArea/BattleArea/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 150)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/GameArea/BattleArea/HBoxContainer/ComputerBattleCard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerSection" type="VBoxContainer" parent="VBoxContainer/GameArea"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="PlayerLabel" type="Label" parent="VBoxContainer/GameArea/PlayerSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Your Hand"
horizontal_alignment = 1

[node name="PlayerHand" type="HBoxContainer" parent="VBoxContainer/GameArea/PlayerSection"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="ElementDiagram" type="Control" parent="."]
layout_mode = 1
offset_left = 55.0
offset_top = 67.0
offset_right = 185.0
offset_bottom = 197.0
script = ExtResource("2_diagram")
diagram_radius = 100.0
node_radius = 24.0
font_size = 14
